--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.3"
+        
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -35,7 +36,7 @@
     },
     "autoload": {
         "psr-4": {
-            "PaHooSBooKinG\\": "app/"
+            "App\\": "app/"
         },
         "classmap": [
             "database/seeds",
